# godot-flake

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  docker-compose.yml  flake.nix  justfile  logging.md  loki-config.yml  progress_bar.xcf  treefmt.nix
crates/jam-audio/: Cargo.toml
crates/jam-audio/src/: lib.rs
crates/jam-core/: Cargo.toml
crates/jam-core/src/: commands.rs  lib.rs  states.rs  types.rs
crates/jam-menu/: Cargo.toml
crates/jam-menu/src/: lib.rs  main_menu.rs  settings_menu.rs
crates/jam-settings/: Cargo.toml
crates/jam-settings/src/: lib.rs
games/template/godot/: .gitignore  icon.svg.import  main.tscn  project.godot  rust.gdextension
games/template/godot/addons/: godot-bevy  jamkit
games/template/rust/: Cargo.toml  run_godot.rs
games/template/rust/src/: integration_tests.rs  lib.rs
godot/: .gitignore  HUD.tscn  HUD_Theme.tres  export_presets.cfg  flipper.glb.import  icon.svg.import  main.tscn  project.godot  rust.gdextension  update_addons.sh
godot-logger/: game_manager.gd  loki_logger.gd
godot/addons/godot-bevy/: bevy_inspector_panel.gd  bevy_inspector_panel.gd.uid  optimized_bulk_operations.gd  plugin.cfg  plugin.gd
godot/addons/godot-bevy/test/: TestRunner.gd.uid
godot/audio/: test_sound.mp3.import  test_sound.wav.import
godot/godot_template/: main.tscn  project.godot  rust.gdextension.uid
godot/godot_template/addons/godot-bevy/: .upstream-revision  README.md  bevy_debugger_plugin.gd  bevy_debugger_plugin.gd.uid  bevy_inspector_panel.tscn  optimized_bulk_operations.gd.uid  optimized_scene_tree_watcher.gd
godot/godot_template/rust/: Cargo.toml
godot/project-template/: PM_wall.tres  UI_plunger_charge.tscn  ball.tscn  flipper.glb  flipper.glb.import  flipper.tscn  flipper_collision.tres  flipper_mesh.tres  icon.svg.import  import_script.gd  import_script.gd.uid  launcher.tscn  main.gd  main.gd.uid  main.tscn  progress_bar_fill.png.import  project.godot  rust-project.gdextension  rust-project.gdextension.uid
godot/rust/: Cargo.toml
godot/rust/src/: audio.rs  commands.rs  game_settings.rs  lib.rs  main_menu.rs  settings_menu.rs
grafana-provisioning/dashboards/: godot-logs.json
integration-tests/godot/: project.godot
integration-tests/godot/addons/: godot-bevy
integration-tests/rust/: Cargo.toml  run_godot.rs
integration-tests/rust/src/: lib.rs
integration-tests/rust/src/itest/: core_tests.rs  menu_tests.rs  mod.rs  settings_tests.rs
jam-test/godot/: .gitignore  project.godot  rust.gdextension.uid
jam-test/godot/addons/: jamkit
jam-test/rust/: Cargo.toml  run_godot.rs
jam-test/rust/src/: lib.rs
jam-test/rust/src/itest/: menu_tests.rs  mod.rs  settings_tests.rs
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: ball.rs  commands.rs  flipper.rs  game_settings.rs  gm.rs  lib.rs  settings_menu.rs
scripts/: update-godot-bevy.sh
shared/assets/models/: flipper.blend  flipper.blend1  flipper.fbx  flipper.glb
shared/godot-addons/godot-bevy/test/: BenchRunner.gd  TestRunner.tscn
shared/godot-addons/jamkit/: HUD.tscn  HUD_Theme.tres
shared/godot-addons/jamkit/audio/: test_sound.wav.import
test-logging/.godot/: global_script_class_cache.cfg
test-logging/.godot/editor/: editor_layout.cfg  editor_script_doc_cache.res  filesystem_cache10  project_metadata.cfg  script_editor_cache.cfg  test_scene.tscn-editstate-cafae89b2e9ebf0216ddfb8de4de99ea.cfg
(+4 files in other folders)
