[package]
name = "template-game"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[[bin]]
path = "run_godot.rs"
name = "run_template"

[dependencies]
bevy = { workspace = true }
godot = { workspace = true }
godot-bevy = { workspace = true }
cargo-godot-lib = { workspace = true }
jam-core = { workspace = true }
jam-settings = { workspace = true }
jam-audio = { workspace = true }
jam-menu = { workspace = true }

[features]
itest = []
