[package]
name = "godot_template"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["bevy_state"] }
godot = "0.4"
godot-bevy = { version = "0.11.0", features = ["default"] }

[workspace]
# Empty workspace table to make this a standalone project
